--- a/css/contact.css
+++ b/css/contact.css
@@ -37,6 +37,7 @@ input[type=submit]{
 }
 .map_container iframe{
      height: 100%;
+     object-fit: cover;
 }
 @media screen and (min-width:768px) {
      main{
