--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ footer{
      display: block;
 }
 .footer2{
-     background-color: rgb(21, 176, 214);
+     background-color: #111;
      padding: 1rem 0;
      color: #fff;
      text-align: center;
