--- a/css/services.css
+++ b/css/services.css
@@ -1,34 +1,34 @@
-main{
+main {
   padding: 2rem 0;
-  background-color: #111;
 }
-main h1{
+
+main h1 {
   text-align: center;
   color: rgb(21, 176, 214);
 }
-.wrapper{
+main .fa{
+  display: block;
+   color: rgb(21, 176, 214);
+   text-align: center;
+}
+.wrapper {
   width: 100%;
-  display: grid;
   max-width: 768px;
-  margin:2rem auto;
+  display: grid;
+  margin: 2rem auto;
   grid-template-columns: 50% 50%;
   gap: 1rem;
   text-align: center;
 }
-@media (max-width: 700px) {
-  .wrapper{
-    grid-template-columns: 100%;
-  }
-}
-.wrapper .box{
+
+.wrapper .box {
   width: 350px;
-  margin: 0 auto;
   position: relative;
   perspective: 1000px;
   z-index: 0;
-} 
-.wrapper .box .front-face{
-  background:linear-gradient(to top ,transparent,#070707da) ,url(../images/1.jpg) center center/cover;
+}
+
+.wrapper .box .front-face {
   height: 220px;
   width: 100%;
   display: flex;
@@ -36,25 +36,54 @@ main h1{
   justify-content: center;
   transition: all 0.5s ease;
 }
-.box .front-face .icon{
-  height: 80px;
+
+.wrapper1 .box:nth-child(1) {
+  background: linear-gradient(to top, transparent, #070707da), url(../images/1.jpg) center center/cover;
+
 }
-.box .front-face .icon i{
-  font-size: 65px;
+.wrapper1 .box:nth-child(4) {
+  background: linear-gradient(to top, transparent, #070707da), url(../images/4.jpg) center center/cover;
+
 }
+.wrapper1 .box:nth-child(2) {
+  background: linear-gradient(to top, transparent, #070707da), url(../images/2.jpg) center center/cover;
+
+}
+.wrapper1 .box:nth-child(3) {
+  background: linear-gradient(to top, transparent, #070707da), url(../images/3.jpg) center center/cover;
+
+}
+.wrapper1 .box:nth-child(4) {
+  background: linear-gradient(to top, transparent, #070707da), url(../images/OIP.jpg) center center/cover;
+
+}
+.wrapper2 .box:nth-child(1) {
+  background: linear-gradient(to top, transparent, #070707da), url(../images/ww.jpg) center center/cover;
+}
+.wrapper2 .box:nth-child(2) {
+  background: linear-gradient(to top, transparent, #070707da), url(../images/R.jpg) center center/cover;
+
+}
+.wrapper2 .box:nth-child(3) {
+  background: linear-gradient(to top, transparent, #070707da), url(../images/4.jpg) center center/cover;
+
+}
+
 .box .front-face span,
-.box .back-face span{
+.box .back-face span {
   font-size: 22px;
   font-weight: 600;
   text-transform: uppercase;
 }
+
 .box .front-face .icon i,
-.box .front-face span{
-  background:#fff;
+.box .front-face span {
+  background: #fff;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.box .back-face{
+
+.box .back-face {
   position: absolute;
   top: 0;
   left: 0;
@@ -71,15 +100,32 @@ main h1{
   box-shadow: 0px 5px 20px 0px rgba(0, 81, 250, 0.1);
   transition: all 0.5s ease;
 }
-.box .back-face p{
+
+.box .back-face p {
   margin-top: 10px;
   text-align: justify;
 }
-.box:hover .back-face{
+
+.box:hover .back-face {
   opacity: 1;
   transform: rotateX(0deg);
+  cursor: pointer;
 }
-.box:hover .front-face{
+
+.box:hover .front-face {
   opacity: 0;
   transform: translateY(-110px) rotateX(90deg);
+  cursor: pointer;
+}
+@media (max-width: 768px) {
+  main{
+    padding: 1rem;
+  }
+  .wrapper {
+    grid-template-columns: 100%;
+  }
+  .wrapper .box{
+    width: 100%;
+    margin: 0;
+  }
 }
