--- a/css/services.css
+++ b/css/services.css
@@ -6,7 +6,7 @@ main h1 {
   text-align: center;
   color: rgb(21, 176, 214);
 }
-main .fa{
+main > .fa{
   display: block;
    color: rgb(21, 176, 214);
    text-align: center;
@@ -117,6 +117,67 @@ main .fa{
   transform: translateY(-110px) rotateX(90deg);
   cursor: pointer;
 }
+section{
+  width: 100%;
+  max-width: 1024px;
+  margin: auto;
+  background:linear-gradient(to top,#15afd69c,#15afd69c), url(../images/OIP.jpg) center center/cover;
+  padding: 2rem;
+}
+section *{
+  color: #fff;
+}
+section h2{
+  text-align: center;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+section > p{
+  text-align: center;
+}
+
+.content{
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  height: auto;
+}
+
+.request_field{
+  width: 100%;
+}
+.inputs{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 1rem;
+}
+.request_field label{
+  display: block;
+  margin-bottom: 0.4rem;
+}
+.request_field input{
+  display: block;
+  width: 100%;
+  font-size: 1.2rem;
+  padding: 0.5rem 1rem;
+  margin-bottom: 0.5rem;
+  outline: none;
+  border: none;
+  color: #000;
+}
+.textarea{
+  width: 100%;
+  margin: 2rem 0;
+}
+.textarea textarea{
+  width: 100%;
+  outline: none;
+  color: #000;
+  padding: 1rem;
+  font-size: 1.2rem;
+}
+
 @media (max-width: 768px) {
   main{
     padding: 1rem;
@@ -127,5 +188,8 @@ main .fa{
   .wrapper .box{
     width: 100%;
     margin: 0;
+  }
+  .inputs{
+    grid-template-columns: 100%;
   }
 }
