--- a/css/contact.css
+++ b/css/contact.css
@@ -33,17 +33,16 @@ input[type=submit]{
      cursor: pointer;
 }
 .map_container{
-     height: 50vh;
+     height: auto;
      background-color: rgb(21, 176, 214);
 }
 .map_container iframe{
      height: 100%;
      width: 100%;
-     object-fit:cover;
 }
 @media screen and (min-width:768px) {
      main{
-          height: 70vh;
+          height: 90vh;
           display: flex;
      }
      .container{
@@ -52,7 +51,7 @@ input[type=submit]{
           display: grid;
           grid-template-columns: repeat(2,1fr);
           height: auto;
-          margin:2rem auto;
+          margin:auto;
           border: 1px solid rgb(21, 176, 214);
      }
      .map_container{
