services page update

--- a/css/services.css
+++ b/css/services.css
@@ -11,111 +11,49 @@ main > .fa{
    color: rgb(21, 176, 214);
    text-align: center;
 }
-.wrapper {
+.wrapper{
   width: 100%;
-  max-width: 768px;
+  max-width: 1200px;
+  margin:2rem auto;
+}
+.service{
   display: grid;
-  margin: 2rem auto;
   grid-template-columns: 50% 50%;
-  gap: 1rem;
-  text-align: center;
 }
-
-.wrapper .box {
-  width: 350px;
+.box{
+  height: 400px;
+}
+.box.image{
   position: relative;
-  perspective: 1000px;
-  z-index: 0;
+  line-height: 400px;
 }
-
-.wrapper .box .front-face {
-  height: 220px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  transition: all 0.5s ease;
-}
-
-.wrapper1 .box:nth-child(1) {
-  background: linear-gradient(to top, transparent, #070707da), url(../images/1.jpg) center center/cover;
-
-}
-.wrapper1 .box:nth-child(4) {
-  background: linear-gradient(to top, transparent, #070707da), url(../images/4.jpg) center center/cover;
-
-}
-.wrapper1 .box:nth-child(2) {
-  background: linear-gradient(to top, transparent, #070707da), url(../images/2.jpg) center center/cover;
-
-}
-.wrapper1 .box:nth-child(3) {
-  background: linear-gradient(to top, transparent, #070707da), url(../images/3.jpg) center center/cover;
-
-}
-.wrapper1 .box:nth-child(4) {
-  background: linear-gradient(to top, transparent, #070707da), url(../images/OIP.jpg) center center/cover;
-
-}
-.wrapper2 .box:nth-child(1) {
-  background: linear-gradient(to top, transparent, #070707da), url(../images/ww.jpg) center center/cover;
-}
-.wrapper2 .box:nth-child(2) {
-  background: linear-gradient(to top, transparent, #070707da), url(../images/R.jpg) center center/cover;
-
-}
-.wrapper2 .box:nth-child(3) {
-  background: linear-gradient(to top, transparent, #070707da), url(../images/4.jpg) center center/cover;
-
-}
-
-.box .front-face span,
-.box .back-face span {
-  font-size: 22px;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-
-.box .front-face .icon i,
-.box .front-face span {
-  background: #fff;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.box .back-face {
+.box.image img{
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
-  height: 220px;
+  height: 100%;
   width: 100%;
-  padding: 30px;
+  z-index: -1;
+}
+.box.image h2{
+  text-transform: uppercase;
+  text-align: center;
   color: #fff;
-  opacity: 0;
-  transform-style: preserve-3d;
-  backface-visibility: hidden;
-  background: rgb(21, 176, 214);
-  transform: translateY(110px) rotateX(-90deg);
-  box-shadow: 0px 5px 20px 0px rgba(0, 81, 250, 0.1);
-  transition: all 0.5s ease;
 }
-
-.box .back-face p {
-  margin-top: 10px;
-  text-align: justify;
+.box.image::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: hsla(0, 0%, 0%, 0.5);
+  z-index: -1;
 }
-
-.box:hover .back-face {
-  opacity: 1;
-  transform: rotateX(0deg);
-  cursor: pointer;
-}
-
-.box:hover .front-face {
-  opacity: 0;
-  transform: translateY(-110px) rotateX(90deg);
-  cursor: pointer;
+.box.text{
+  padding: 2rem;
+  display: flex;
+  align-items: center;
 }
 section{
   width: 100%;
@@ -193,17 +131,33 @@ input[type=submit]:hover{
   cursor: pointer;
 }
 @media (max-width: 768px) {
-  main{
-    padding: 1rem;
+  .service{
+    margin-bottom: 3rem;
+    box-shadow: 0px 15px 20px #00000062;
   }
-  .wrapper {
-    grid-template-columns: 100%;
+  .service.even{
+    display: flex;
+    flex-direction: column;
   }
-  .wrapper .box{
+  .service.odd{
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .box{
     width: 100%;
-    margin: 0;
+  }
+  .box.image{
+    height: 300px;
+    line-height: 300px;
+  }
+  .box.text{
+    height: auto;
+    display: block;
   }
   .inputs{
     grid-template-columns: 100%;
+  }
+  input[type=submit]{
+    max-width: 100%;
   }
 }
