--- a/css/contact.css
+++ b/css/contact.css
@@ -33,12 +33,13 @@ input[type=submit]{
      cursor: pointer;
 }
 .map_container{
-     height: auto;
+     height: 40vh;
      background-color: rgb(21, 176, 214);
 }
 .map_container iframe{
      height: 100%;
      width: 100%;
+     object-fit: cover;
 }
 @media screen and (min-width:768px) {
      main{
