--- a/css/services.css
+++ b/css/services.css
@@ -33,12 +33,14 @@ main > .fa{
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: -1;
+  z-index: -2;
 }
 .box.image h2{
+  position: relative;
   text-transform: uppercase;
   text-align: center;
   color: #fff;
+  z-index: -1;
 }
 .box.image::after{
   position: absolute;
@@ -48,7 +50,7 @@ main > .fa{
   left: 0;
   top: 0;
   background-color: hsla(0, 0%, 0%, 0.5);
-  z-index: -1;
+  z-index: -2;
 }
 .box.text{
   padding: 2rem;
