--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,10 @@
      box-sizing: border-box;
      font-family: 'Poppins', sans-serif;
 }
-
+html{
+     scroll-behavior: smooth;
+     transition: all 0.4s ease-in-out;
+}
 a {
      text-decoration: none;
 }
@@ -271,4 +274,27 @@ footer {
      to {
           opacity: 1;
      }
+}
+.top-btn{
+     position: fixed;
+     display: none;
+     line-height: 50px;
+     text-align: center;
+     width: 50px;
+     height: 50px;
+     border-radius: 10px;
+     font-family: 600;
+     color: white;
+     background-color: rgb(21, 176, 214);
+     border: none;
+     bottom: 10px;
+     right: 10px;
+     box-shadow: 0px 5px 0px #333;
+}
+.top-btn:active{
+     transform: translateY(3px);
+     box-shadow: 0px 2px 0px #333;
+}
+.show{
+     display: block;
 }
